testsuite/bsc.interra/bugs/bugID133/Ambg.bs.bsc-out.expected
checking package dependencies
compiling Ambg.bs
Error: "Ambg.bs", line 63, column 19: (T0003)
  Unbound constructor `Maybe'
